feat(automations): implement automations v1
